--- a/projet.ipynb
+++ b/projet.ipynb
@@ -16,7 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy.integrate as spi\n",
     "import numpy as np\n",
-    "\n",
+    "#  hoi\n",
     "\n",
     "# y = [V, T, I, F, R, Cn, E, Bn, P, As, Al]\n",
     "\n",
